Fatou B Ceesay page changed and about structured

--- a/src/about.html
+++ b/src/about.html
@@ -92,7 +92,7 @@
             class="p-2 px-3 text-sm block w-full nav-link active"
             >About</a
           >
-          <a href="services.html" class="p-2 px-3 text-sm block w-full nav-link"
+          <a href="#services" class="p-2 px-3 text-sm block w-full nav-link"
             >Services</a
           >
           <a
@@ -125,7 +125,7 @@
           >About</a
         >
         <a
-          href="services.html"
+          href="#services"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link"
           >Services</a
         >
@@ -143,7 +143,123 @@
     </nav>
 
     <!-- main content -->
-    <main></main>
+    <main>
+      <section class="h-[50vh] relative">
+        <div class="absolute top-0 left-0 w-full h-full z-30 bg-black/90"></div>
+        <div
+          class="absolute top-0 left-0 w-full h-full z-40 p-10 flex flex-col justify-center"
+        >
+          <h2
+            class="flex items-center text-4xl mb-6 font-thin animate__animated animate__slideInDown"
+            data-wow-duration="5s"
+            data-wow-delay="3s"
+          >
+            <span class="font-thin text-beeYellow mx-2">FA2BEE</span>
+            <span class="font-extrabold mx-2">Inc</span>
+          </h2>
+          <p
+            class="text-sm mb-5 truncate animate__animated animate__slideInLeft"
+          >
+            Embrace Excellence, Experience Convenience with FA2BEE Inc.
+          </p>
+          <div
+            class="flex items-center w-fit animate__animated animate__slideInUp"
+          >
+            <a
+              href="#founders-message"
+              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow border border-black hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-2 px-5 mx-1 md:py-3 md:px-7 md:mx-2 text-xs md:text-sm text-center"
+              data-wow-duration="7s"
+              data-wow-delay="5s"
+            >
+              Founder's Message
+            </a>
+            <a
+              href="#services"
+              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow border border-black hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-2 px-5 mx-1 md:py-3 md:px-7 md:mx-2 text-xs md:text-sm text-center"
+              data-wow-duration="7s"
+              data-wow-delay="5s"
+            >
+              Our Services
+            </a>
+          </div>
+        </div>
+
+        <img
+          src="img/banner/fa2bee-logo-banner.png"
+          alt=""
+          class="absolute top-0 left-0 w-full h-full object-cover"
+        />
+      </section>
+
+      <section id="founders-message" class="p-8 md:px-16">
+        <h1
+          class="text-center mb-7 text-beeYellow font-bold text-2xl md:text-3xl"
+        >
+          Founder's Message
+        </h1>
+        <div class="flex items-center justify-center mb-10">
+          <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+          <img src="img/bee-with-ring.png" class="mx-2" />
+          <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+        </div>
+
+        <div class="two-column-text">
+          <p class="my-3">
+            Welcome to FA2BEE Inc., a company fueled by unbreakable dreams and a
+            commitment to making a difference. Founded by
+            <a class="text-beeYellow underline" href="fatou-b-ceesay.html"
+              >Fatou B Ceesay</a
+            >, our story is one of resilience, determination, and the pursuit of
+            excellence. From humble beginnings in The Gambia, West Africa,
+            Fatou's journey has taken her on a remarkable path, shaping her into
+            the inspiring entrepreneur she is today.
+          </p>
+          <p class="my-3">
+            At FA2BEE Inc., we believe in the power of dreams, the strength of
+            community, and the importance of empowering others. Our journey
+            started with a focus on serving others through employment consulting
+            and residential services, touching the lives of vulnerable adults.
+            But Fatou's entrepreneurial spirit burned bright, leading her to
+            venture into the world of beauty and creativity. From opening a
+            salon to creating inclusive doll lines, she recognized the need to
+            inspire and represent diverse communities worldwide.
+          </p>
+          <p class="my-3">
+            As FA2BEE Inc. evolved, so did our vision. Understanding the
+            importance of clean and organized spaces, we expanded our services
+            to include professional cleaning and laundry solutions. With an
+            unwavering commitment to quality and reliability, we strive to
+            create spaces that inspire and uplift.
+          </p>
+          <p class="my-3">
+            Our commitment goes beyond business ventures; it is deeply rooted in
+            our core values. We believe in fostering positive connections,
+            embracing diversity, and creating opportunities for others. Through
+            our projects, collaborations, and philanthropic endeavors, we aim to
+            make a lasting impact on communities, empowering individuals to
+            dream big and achieve greatness.
+          </p>
+          <p class="my-3">
+            FA2BEE Inc. is more than just a company – it's a movement fueled by
+            passion, resilience, and a shared purpose. Join us on this journey
+            as we continue to break barriers, challenge norms, and spread
+            inspiration. Together, we can build a world where dreams are
+            unbreakable, and every individual has the opportunity to thrive.
+          </p>
+          <p class="my-3">Thank you for being a part of our story.</p>
+          <p class="my-3">With gratitude,</p>
+          <p class="my-3">
+            <a class="text-beeYellow underline" href="fatou-b-ceesay.html"
+              >Fatou B Ceesay</a
+            >
+            <br />
+            Founder, FA2BEE Inc.
+          </p>
+        </div>
+      </section>
+
+      <section id="services"></section>
+    </main>
 
     <footer class="flex items-center justify-center text-center p-3">
       <p class="text-sm xl:text-lg text-gray-300">
