--- a/src/fatou-b-ceesay.html
+++ b/src/fatou-b-ceesay.html
@@ -87,7 +87,7 @@
             >About</a
           >
           <a
-            href="services.html"
+            href="about.html#services"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >Services</a
           >
@@ -121,7 +121,7 @@
           >About</a
         >
         <a
-          href="services.html"
+          href="about.html#services"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >Services</a
         >
@@ -140,106 +140,261 @@
 
     <!-- main content -->
     <main>
-      <!-- showcase -->
-      <section class="flex flex-col xl:flex-row xl:items-stretch xl:p-16">
-        <div class="">
-          <img
-            src="img/fatou-b/circle-design-yellow.png"
-            alt="Fatou B. Cessay (FA2BEE)"
-            class="w-full"
-          />
-        </div>
+      <section class="h-[50vh] relative">
+        <div class="absolute top-0 left-0 w-full h-full z-30 bg-black/60"></div>
         <div
-          class="flex-1 p-3 px-10 xl:px-16 animate__animated animate__slideInRight"
-          data-wow-duration="5s"
-          data-wow-delay="4s"
+          class="absolute top-0 left-0 w-full h-full z-40 p-10 flex flex-col justify-center"
         >
-          <div class="flex justify-end">
-            <img
-              src="img/fatou-b/vitamins-circle.png"
-              alt="Fatou B. Cessay (FA2BEE)"
-            />
-          </div>
-          <h2 class="text-lg font-extrabold mb-2 text-gray-300">
-            By Fatou B Ceesay
+          <h2
+            class="flex items-center text-4xl mb-6 font-thin animate__animated animate__slideInDown"
+            data-wow-duration="5s"
+            data-wow-delay="3s"
+          >
+            <span class="font-extrabold mx-2">BY</span>
+            <span class="font-thin text-beeYellow mx-2">FATOU B</span>
+            <span class="font-extrabold mx-2">CEESAY</span>
           </h2>
+
           <div class="w-fit mb-6">
             <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
               Unbreakable Dreams: From Africa to the World
             </h2>
             <div class="border border-beeYellow h-0.5"></div>
           </div>
-          <p class="font-light my-5 p-3">
-            "Unbreakable Dreams: From Africa to the World" is an autobiography
-            by Fatou B Ceesay, chronicling her remarkable journey from The
-            Gambia to achieving entrepreneurial success. The story begins with
-            her upbringing in Africa, where she faced challenges and traumas but
-            remained resilient. She highlights the influence of her family, her
-            educational pursuits, and her eventual move to the United States.
-            Fatou's career initially focused on helping others before she
-            embraced her passion for entrepreneurship by opening a salon in
-            Michigan. Her ventures expanded to include the creation of Femme
-            Noir dolls, a cleaning business, a laundry mart in The Gambia, and
-            an all-kids salon.
-          </p>
         </div>
+
+        <img
+          src="img/banner/page-banner.png"
+          alt=""
+          class="absolute top-0 left-0 w-full h-full object-cover"
+        />
       </section>
 
-      <!-- text content -->
-      <section
-        class="flex flex-col xl:flex-row items-stretch px-10 xl:px-16 bg-customBlack"
-      >
-        <div
-          class="flex-1 animate__animated animate__slideInLeft"
-          data-wow-duration="5s"
-          data-wow-delay="3s"
-        >
-          <p class="font-light my-3 p-3">
-            Amidst her entrepreneurial pursuits, Fatou engages in personal
-            projects such as crocheting and content creation, all while
-            navigating the joys and challenges of motherhood. The autobiography
-            also delves into the obstacles she encountered, including becoming a
-            single mother and closing down her salon. Fatou draws inspiration
-            from influential figures like Nicki Minaj and Chimamanda Ngozi
-            Adichie and shares her spiritual beliefs and values centered around
-            doing right by others.
+      <section class="p-8 md:px-16">
+        <div class="two-column-text">
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              A Gambian Journey
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            I was born as Fatou B Ceesay in The Gambia, a small West African
+            country. Growing up, I experienced both the joys and challenges of
+            life in Africa. Despite facing bullies and enduring trauma, I never
+            let it hinder my spirit. My family played a significant role in
+            shaping who I am today, with my mother being a teacher and my father
+            working for the government. I have four siblings, but sadly, I lost
+            my oldest brother in January 2022. As a single mother to my
+            beautiful daughter, Maya Elizabeth Joslin, I am dedicated to
+            providing her with the best life possible.
           </p>
-          <div class="flex justify-center">
-            <img
-              src="img/fatou-b/vitamins-circle.png"
-              alt="Fatou B. Cessay (FA2BEE)"
-            />
-          </div>
-        </div>
-        <div
-          class="flex-1 animate__animated animate__slideInUp"
-          data-wow-duration="5s"
-          data-wow-delay="3s"
-        >
-          <div class="font-light my-5 p-3">
-            <p>
-              The narrative concludes with Fatou's future aspirations to become
-              a leading businesswoman in The Gambia and surrounding countries,
-              creating opportunities for others and leaving a lasting legacy.
-              She imparts wisdom learned from her journey, emphasizing the
-              importance of surrounding oneself with supportive individuals,
-              perseverance in the face of adversity, and self-belief.
-            </p>
 
-            <p>
-              In the epilogue, Fatou reflects on her journey of growth,
-              self-discovery, and unwavering determination, expressing
-              excitement for the future and the impact she can make on the
-              world.
-            </p>
-
-            <p>
-              Overall, "Unbreakable Dreams: From Africa to the World" tells the
-              inspiring story of Fatou B Ceesay's resilience, entrepreneurship,
-              and determination to create a lasting impact on her community and
-              beyond.
-            </p>
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              An Educational Odyssey
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
           </div>
+          <p class="my-2">
+            My educational journey began in The Gambia, where I attended Ndows
+            Comprehensive School before transferring to Gambia High School,
+            where I completed my high school degree. I was particularly drawn to
+            the home economics course, perhaps because my mother was a teacher
+            in that field. Education has always been important to me, and it has
+            laid the foundation for my future endeavors.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              From Employment to Entrepreneurship
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            After moving to the United States at the age of 17, I embarked on a
+            career path focused on helping others. I started as an employment
+            consultant for people with disabilities and later transitioned into
+            a program manager role in residential services. Working with
+            vulnerable adults became a source of inspiration and personal
+            growth. However, my heart always yearned for entrepreneurship, and I
+            took a leap of faith by opening a salon in Michigan. Hair has always
+            been a passion of mine, and it was fulfilling to express my
+            creativity in that field. But my entrepreneurial spirit didn't stop
+            there.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Empowering Through Innovation
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            When I became a mother, I realized the importance of representation
+            and identity for children. That's when I created Femme Noir dolls, a
+            doll line that empowers black kids worldwide. Recognizing the need
+            for inclusive cleaning services, I launched a cleaning business in
+            Seattle, Washington, which quickly gained momentum. In November
+            2022, I expanded my entrepreneurial endeavors by opening a laundry
+            mart in The Gambia. And in June 2023, I launched an all-kids salon,
+            further adding to my repertoire of businesses.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Passion Projects and Personal Growth
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            Beyond my entrepreneurial pursuits, I find joy in crocheting, which
+            has become a creative outlet and a source of income. Content
+            creation allows me to showcase my videography skills and transform
+            everyday moments into art. Being a devoted mother is both fulfilling
+            and challenging, constantly reminding me to strive for the best.
+            Traveling, exploring new cultures, and expanding my horizons have
+            become vital parts of my life.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Overcoming Obstacles
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            I have faced personal challenges, including becoming a single
+            mother, closing down my salon, and starting anew in a different
+            state. These hurdles tested my resilience, but they also made me
+            stronger. I firmly believe that I can overcome anything in life
+            through determination and faith.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Inspirations and Beliefs
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            Influenced by remarkable individuals like Nicki Minaj and Chimamanda
+            Ngozi Adichie, I draw inspiration from their achievements. I am a
+            spiritual person who believes in the power of angels, guides, and
+            karma. My values center around doing right by others and fostering
+            positive connections.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Relationships and Growth
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            Navigating romantic relationships and friendships has been a journey
+            of ups and downs. As I continue to grow personally and
+            professionally, I understand that some relationships may naturally
+            drift apart, allowing space for new connections to flourish.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Future Aspirations
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            Looking ahead, my dreams and aspirations are bold and expansive. I
+            am determined to become the biggest businesswoman in The Gambia and
+            the surrounding countries. I have countless business ideas and
+            projects that I am actively working on, driven by a deep desire to
+            make a lasting impact. Through hard work, dedication, and the grace
+            of God, I believe that all my ambitions will come to fruition. My
+            ultimate goal is to create opportunities for others, empower
+            communities, and leave a legacy of success.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Lessons Learned and Wisdom Shared
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            Throughout my journey, I have learned valuable lessons that I would
+            like to share with others. Firstly, I've come to understand that the
+            people we surround ourselves with greatly influence our growth. As
+            we evolve, some individuals may naturally fall away, making room for
+            new, like-minded individuals to enter our lives. Secondly, I've
+            realized the importance of perseverance in the face of adversity.
+            Life is full of challenges, but it is our ability to rise above them
+            that defines our character. Lastly, I've come to embrace the power
+            of self-belief and the strength that lies within. When we believe in
+            ourselves, our dreams become attainable, and our potential knows no
+            bounds.
+          </p>
+
+          <div class="mt-10">
+            <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+              Epilogue
+            </h1>
+            <div class="flex items-center justify-center mb-5">
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+              <img src="img/bee-with-ring.png" class="mx-2" />
+              <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            </div>
+          </div>
+          <p class="my-2">
+            My autobiography tells the story of a determined and resilient
+            individual who defied odds, pursued passions, and became an
+            inspiration to others. From my humble beginnings in The Gambia to
+            expanding my ventures across borders, my journey has been one of
+            growth, self-discovery, and unwavering determination. As I continue
+            to chart my path, I am excited to see what the future holds and the
+            impact I can make on the world around me.
+          </p>
+          <p></p>
         </div>
       </section>
     </main>
