--- a/src/index.html
+++ b/src/index.html
@@ -299,7 +299,7 @@
               </p>
 
               <a
-                href="about.html"
+                href="about.html#founders-message"
                 class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
@@ -318,8 +318,9 @@
               </a>
             </div>
             <div class="flex-1 p-5">
-              <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
-                Fatou B Ceesay
+              <h2 class="text-2xl font-extrabold mb-2 flex flex-col">
+                <span class="text-beeYellow"> Fatou B Ceesay </span>
+                <span class="text-xs">(FOUNDER & CEO)</span>
               </h2>
               <p class="font-light text-sm my-5">
                 From humble beginnings in The Gambia, Fatou B Ceesay has defied
@@ -366,7 +367,7 @@
         ></div>
 
         <a
-          href="services.html"
+          href="about.html#services"
           class="block mt-3 w-fit rounded-3xl hover:bg-customBlack mx-auto hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
           data-wow-duration="7s"
           data-wow-delay="5s"
