about page complete and fatoub page complete

--- a/src/fatou-b-ceesay.html
+++ b/src/fatou-b-ceesay.html
@@ -146,17 +146,17 @@
           class="absolute top-0 left-0 w-full h-full z-40 p-10 flex flex-col justify-center"
         >
           <h2
-            class="flex items-center text-4xl mb-6 font-thin animate__animated animate__slideInDown"
+            class="flex items-center text-xl md:text-3xl mb-6 font-thin animate__animated animate__slideInDown"
             data-wow-duration="5s"
             data-wow-delay="3s"
           >
-            <span class="font-extrabold mx-2">BY</span>
+            <span class="font-extrabold">BY</span>
             <span class="font-thin text-beeYellow mx-2">FATOU B</span>
             <span class="font-extrabold mx-2">CEESAY</span>
           </h2>
 
           <div class="w-fit mb-6">
-            <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
+            <h2 class="text-lg md:text-2xl font-extrabold mb-2 text-beeYellow">
               Unbreakable Dreams: From Africa to the World
             </h2>
             <div class="border border-beeYellow h-0.5"></div>
