about page complete and fatoub page complete

--- a/src/about.html
+++ b/src/about.html
@@ -275,7 +275,7 @@
             id="mission"
           >
             <h2 class="font-bold text-beeYellow text-2xl mb-3">Mission</h2>
-            <p class="w-9/12 mx-auto">
+            <p class="w-11/12 xl:w-9/12 mx-auto">
               At FA2BEE Inc., our mission is to inspire and empower individuals
               through innovative and inclusive products and services that
               enhance their lives and promote positive change.
@@ -286,7 +286,7 @@
             id="vision"
           >
             <h2 class="font-bold text-beeYellow text-2xl mb-3">Vision</h2>
-            <p class="w-9/12 mx-auto">
+            <p class="w-11/12 xl:w-9/12 mx-auto">
               Build a world of equal access and inclusive opportunities, Make a
               lasting impact on communities and individuals, Leave a legacy of
               empowerment and transformation.
