about page complete and fatoub page complete

--- a/src/fatou-b-ceesay.html
+++ b/src/fatou-b-ceesay.html
@@ -156,7 +156,7 @@
           </h2>
 
           <div class="w-fit mb-6">
-            <h2 class="text-lg md:text-2xl font-extrabold mb-2 text-beeYellow">
+            <h2 class="text-xs md:text-2xl font-extrabold mb-2 text-beeYellow">
               Unbreakable Dreams: From Africa to the World
             </h2>
             <div class="border border-beeYellow h-0.5"></div>
