fa2bee laundry page complete

--- a/src/about.html
+++ b/src/about.html
@@ -158,7 +158,7 @@
             <span class="font-extrabold mx-2">Inc</span>
           </h2>
           <p
-            class="text-sm mb-5 truncate animate__animated animate__slideInLeft"
+            class="text-sm xl:text-lg mb-5 truncate animate__animated animate__slideInLeft"
           >
             Embrace Excellence, Experience Convenience with FA2BEE Inc.
           </p>
@@ -350,7 +350,7 @@
           description:
             "Convenient and quality laundry service. Careful handling, prompt turnaround, and neatly folded clothes. Say goodbye to laundry hassles.",
           icon: "img/services/laundry.png",
-          link: "https://riahbeelaundry.com/",
+          link: "fa2bee-laundry.html",
           slug: "laundry",
         },
         {
