--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             >Services</a
           >
           <a href="#ourNumbers" class="p-2 px-3 text-sm block w-full nav-link"
-            >Our Numbers</a
+            >Why Us</a
           >
           <a href="#testimonials" class="p-2 px-3 text-sm block w-full nav-link"
             >Testimonials</a
@@ -120,7 +120,7 @@
         <a
           href="#ourNumbers"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link"
-          >Our Numbers</a
+          >Why Us</a
         >
         <a
           href="#testimonials"
@@ -381,7 +381,7 @@
         <h1
           class="text-center mb-7 text-beeYellow font-bold text-2xl md:text-3xl xl:text-4xl"
         >
-          Our Numbers
+          Why FA2BEE Inc.
         </h1>
         <div class="flex items-center justify-center mb-14">
           <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
